--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ button:active {
 	display:none;
 }
 
-.title{
+.startButton img{
 	position: absolute;
 }
 
@@ -37,7 +37,8 @@ button:active {
 	display:none;
 }
 
-.titleCSS{
-
+.mainframeRemoveDisplay{
+	display: block;
 }
+
 
