--- a/style.css
+++ b/style.css
@@ -93,8 +93,9 @@ button:active {
 	height: 414px;
 	width: 194px;
 	margin-left: 610px;
-	margin-top: -500px;
+	margin-top: -800px;
 	display: none;
+	animation: falling 2s forwards;
 }
 
 @keyframes walk{
@@ -112,5 +113,11 @@ button:active {
 @keyframes flying{
 	100%{
 		transform: translateX(150px);
+	}
+}
+
+@keyframes falling{
+	100%{
+		transform: translateY(380px);
 	}
 }
