--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ button {
   text-decoration: none;
   outline: none;
   color: #fff;
-  background-color: #4CAF50;
+  background-color: #336575;
   border: none;
   border-radius: 15px;
   box-shadow: 0 2px #999;
@@ -18,16 +18,21 @@ button {
   width:200px;
 }
 
-button:hover {background-color: #3e8e41}
+button:hover {background-color: #234854}
 
 button:active {
-  background-color: #3e8e41;
+  background-color: #234854;
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
+
 h1{
-	position: absolute;
+	margin-left: 245px;
+	margin-top: 50px;
 	font-family: 'Amatic SC', cursive;
+}
+.clickText{
+	position: absolute;
 	display: none;
 }
 
